2009-09-02  Olivier Hainque  <hainque@adacore.com>

	* init.c (__gnat_error_handler, AIX): Add ATTRIBUTE_UNUSED on si
	and uc arguments.
	
2009-09-02  Olivier Hainque  <hainque@adacore.com>

	* gcc-interface/decl.c (cannot_be_superflat_p): Handle
	Signed_Integer_Type_Definition Scalar_Ranges.

2009-09-02  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (gnat_gimplify_expr) <ADDR_EXPR>: Gimplify the
	SAVE_EXPR built for misaligned arguments.  Remove redundant stuff.
	(addressable_p): Return true for more rvalues.

2009-09-01  Jakub Jelinek  <jakub@redhat.com>

	* gcc-interface/utils2.c (maybe_wrap_malloc, maybe_wrap_free): Cast
	POINTER_SIZE to HOST_WIDE_INT.

2009-09-01  Richard Guenther  <rguenther@suse.de>

	* gcc-interface/misc.c (LANG_HOOKS_MARK_ADDRESSABLE): Remove.

2009-08-25  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (call_to_gnu): Tidy.
	(gnat_to_gnu) <N_Slice>: Set TYPE_ARRAY_MAX_SIZE if the slice has
	non-constant size but the array itself has constant size.
	* gcc-interface/utils.c (convert_vms_descriptor64): Fix type
	consistency error.
	(convert_vms_descriptor32): Likewise.

2009-08-22  Aurelien Jarno  <aurelien@aurel32.net>

	* gcc-interface/Makefile.in: Add Ada support for 
	GNU/kFreeBSD x86_64.
	* system-freebsd-x86_64.ads: New file based on 
	system-freebsd-x86.ads.

2009-08-20  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/utils.c (convert): In the padded case, do the final
	conversion as an unchecked conversion if the underlying types are
	array types with variable size.

2009-08-20  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/ada-tree.h (SET_TYPE_RM_VALUE): Mark the expression
	as visited.
	* gcc-interface/misc.c (gnat_get_subrange_bounds): Always return the
	bounds.
	* gcc-interface/trans.c (add_decl_expr): Do not mark gigi-specific
	fields.
	(gnat_gimplify_expr) <DECL_EXPR>: New case.

2009-08-17  Aurelien Jarno  <aurelien@aurel32.net>
